# yapc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: version.py
tests/: test_cookiecutter.py  utils.py
yapc/: cli.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  demo.tape  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  vhs-pr-comment.yml
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: automerge-pre-commit.yml.yml  automerge.yml  codeql.yml  create-draft-release.yml  dependabot-automerge.yml  main.yml  on-release-main.yml  pre-commit-automerge.yml  pre-commit-autoupdate.yml  precommit-autoupdate.yml  preview.yml  release.yml  validate-codecov-config.yml  vhs-pr-comment.yml  vhs.yml
{{cookiecutter.project_name}}/scripts/: check_changelog_date.py  fix_changelog_date.py  version.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _version.py  cli.py  exceptions.py  {{cookiecutter.project_slug}}.py
